@@ -1,0 +1,17 @@
+---
+version: 2.0.0
+checks:
+  oval:com.puppet.forge.simp.logrotate.manage_wtmp:
+    settings:
+      parameter: logrotate::manage_wtmp
+      value: true
+    type: puppet-class-parameter
+    controls:
+      nist_800_53_rev4:AU-4: true
+      nist_800_53_rev4:AU-5:b: true
+      nist_800_53_rev4:AU-11: true
+    identifiers:
+      nist_800_53_rev4:
+      - AU-4
+      - AU-5:b
+      - AU-11
