@@ -1,3 +1,6 @@
+* Thu Jun 06 2019 Steven Pritchard <steven.pritchard@onyxpoint.com> -6.3.2-0
+- Add v2 compliance_markup data
+
 * Mon Mar 11 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.3.1-0
 - Updated a URL in the README.md
 
